Updated about and contact

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ paginate = 6
   facebook = ""
   quora = ""
   twitter = "http://twitter.com/bul_ikana"
-  github = "http://github.com/bul-ikana"
+  github = "https://github.com/zief0002/qbear"
   email = ""
 
   fbLikeBox = ""
