--- a/config.toml
+++ b/config.toml
@@ -5,8 +5,8 @@ theme = "hugo-cards"
 paginate = 6
 
 [params]
-  builtBy = "bool"
-  defaultImage = "gopher.jpg"
+  builtBy = "QBEAR"
+  defaultImage = "bear2.png"
 
   facebook = ""
   quora = ""
@@ -23,6 +23,6 @@ paginate = 6
   disqus = ""
 
   [params.copyright]
-     name = "bool"
-     link = "https://bool.netlify.com"
+     name = "QBEAR"
+     link = "https://qbear.netlify.com"
 
